--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/delimiter": "^1.4.0",
+    "@editorjs/editorjs": "^2.29.1",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
+    "@editorjs/inline-code": "^1.5.0",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/nested-list": "^1.4.2",
+    "@editorjs/paragraph": "^2.11.5",
+    "@editorjs/quote": "^2.6.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@firebase/firestore": "^4.6.3",
@@ -18,14 +29,25 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.2",
+    "framer-motion": "^12.0.0-alpha.0",
+    "gsap": "^3.12.5",
+    "next-themes": "^0.3.0",
     "plyr": "^3.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
     "react-router-dom": "^6.23.1",
-    "react-top-loading-bar": "^2.3.1"
+    "react-top-loading-bar": "^2.3.1",
+    "split-type": "^0.3.4",
+    "swiper": "^11.1.4",
+    "tailwind-merge": "^2.3.0",
+    "title-editorjs": "^1.0.2",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
